Renaming package "org.arakhne.vmutil" to "org.arakhne.afc.vmutil" in unit tests.